tests/snapshots/snapshots__timesheet_with_monochrome_badges_styled.snap
---
source: tests/snapshots.rs
expression: buffer_to_styled(&buf)
---
{fg=#6b7280 bg=#1f232b mod=bold} FILTERS{/}{fg=#c8ccd4 bg=#1f232b}                  {/}{fg=#2a2f38 bg=#1f232b}┌ Timesheet {/}{fg=#1a1d23 bg=#e07a7a mod=bold} Wed 2026-05-06 {/}{fg=#6b7280 bg=#1f232b} by project{/}{fg=#2a2f38 bg=#1f232b}┐{/}{fg=#6b7280 bg=#1f232b mod=bold} DETAIL · TIMESHEET{/}{fg=#c8ccd4 bg=#1f232b}               {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#7fb3a8 bg=#1f232b mod=bold} MATTERS · BILLABLE{/}{fg=#c8ccd4 bg=#1f232b}       {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#8aa9c9 bg=#2f3947 mod=bold}  +Smith @call  — {/}{fg=#c8ccd4 bg=#2a2f38 mod=bold} 1h 0m (1.0h) {/}{fg=#8aa9c9 bg=#2f3947 mod=bold} (1.0h{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#8aa9c9 bg=#1f232b} PERIOD{/}{fg=#c8ccd4 bg=#1f232b}                           {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+Smith          {/}{fg=#c8ccd4 bg=#1f232b} 1h 00m{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#2f3947 mod=bold}    • Client call{/}{bg=#1f232b}                     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#6b7280 bg=#1f232b} billable     {/}{fg=#c8ccd4 bg=#1f232b}1.0h                {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#6b7280 bg=#1f232b}  +Smith @drafting  — {/}{fg=#c8ccd4 bg=#2a2f38 mod=bold} 15m (0.3h) {/}{bg=#1f232b} {/}{fg=#c8ccd4 bg=#6b7280 mod=bold}DNB{/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#6b7280 bg=#1f232b} non-billable {/}{fg=#c8ccd4 bg=#1f232b}0.3h                {/}
{fg=#6b7280 bg=#1f232b mod=bold} NON-BILLABLE{/}{fg=#c8ccd4 bg=#1f232b}             {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#6b7280 bg=#1f232b}    • Quiet review{/}{bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#6b7280 bg=#1f232b} total        {/}{fg=#c8ccd4 bg=#1f232b}1.3h                {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}  {/}{fg=#7fb3a8 bg=#1f232b}+Smith          {/}{fg=#c8ccd4 bg=#1f232b}    15m{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#8aa9c9 bg=#1f232b} ENTRY{/}{fg=#c8ccd4 bg=#1f232b}                            {/}
{fg=#8aa9c9 bg=#1f232b mod=bold} TOTALS{/}{fg=#c8ccd4 bg=#1f232b}                   {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}2026-05-06                        {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#6b7280 bg=#1f232b}billable        {/}{fg=#c8ccd4 bg=#1f232b} 1h 00m{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#7fb3a8 bg=#1f232b}+Smith @call{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#6b7280 bg=#1f232b}non-billable    {/}{fg=#c8ccd4 bg=#1f232b}    15m{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#6b7280 bg=#1f232b} group dur    {/}{fg=#c8ccd4 bg=#2a2f38 mod=bold} 1.0h {/}{fg=#c8ccd4 bg=#1f232b} · billable   {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#6b7280 bg=#1f232b}total           {/}{fg=#c8ccd4 bg=#1f232b} 1h 15m{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#8aa9c9 bg=#1f232b} NARRATIVE 1/1 {/}{fg=#c8ccd4 bg=#1f232b}                   {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}  Client call                     {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#8aa9c9 bg=#1f232b mod=bold}  Billable:     1h 0m (1.0h) (1.0h){/}{bg=#1f232b}   {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#6b7280 bg=#1f232b mod=bold}  Non-billable: 15m (0.3h) (0.3h){/}{bg=#1f232b}     {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#8aa9c9 bg=#1f232b mod=bold}  Total:        1h 15m (1.3h) (1.3h){/}{bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{fg=#2a2f38 bg=#1f232b}└──────────────────────────────────────┘{/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#1a1d23 bg=#8aa9c9 mod=bold} TIMESHEET {/}{bg=#252a33}  {/}{fg=#a8b0bc bg=#252a33}j/k navigate  ·  Enter edit  ·  b billable  ·  n{/}{fg=#6b7280 bg=#252a33}2 open · 2026-05-06 · tuxtime 2026.7.3 {/}
