tests/snapshots/snapshots__timesheet_with_plain_badges_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                  ┌ Timesheet  Wed 2026-05-06  by project┐ DETAIL · TIMESHEET               
                          │                                      │                                  
 MATTERS · BILLABLE       │  +Smith @call  —  1h 0m (1.0h)  (1.0h│ PERIOD                           
   +Smith           1h 00m│    • Client call                     │ billable     1.0h                
                          │  +Smith @drafting  —  15m (0.3h)  DNB│ non-billable 0.3h                
 NON-BILLABLE             │    • Quiet review                    │ total        1.3h                
   +Smith              15m│                                      │                                  
                          │                                      │ ENTRY                            
 TOTALS                   │                                      │2026-05-06                        
   billable         1h 00m│                                      │+Smith @call                      
   non-billable        15m│                                      │ group dur     1.0h  · billable   
   total            1h 15m│                                      │                                  
                          │                                      │ NARRATIVE 1/1                    
                          │                                      │  Client call                     
                          │                                      │                                  
                          │                                      │                                  
                          │                                      │                                  
                          │                                      │                                  
                          │                                      │                                  
                          │                                      │                                  
                          │                                      │                                  
                          │                                      │                                  
                          │                                      │                                  
                          │                                      │                                  
                          │                                      │                                  
                          │                                      │                                  
                          │                                      │                                  
                          │  Billable:     1h 0m (1.0h) (1.0h)   │                                  
                          │  Non-billable: 15m (0.3h) (0.3h)     │                                  
                          │  Total:        1h 15m (1.3h) (1.3h)  │                                  
                          └──────────────────────────────────────┘                                  
 TIMESHEET   j/k navigate  ·  Enter edit  ·  b billable  ·  n2 open · 2026-05-06 · tuxtime 2026.7.3
