tests/snapshots/snapshots__welcome_overlay_styled.snap
---
source: tests/snapshots.rs
expression: buffer_to_styled(&buf)
---
{fg=#6b7280 bg=#1f232b mod=bold} FILTERS{/}{fg=#c8ccd4 bg=#1f232b}                  {/}{bg=#1f232b} {/}{fg=#8aa9c9 bg=#1f232b}▶{/}{fg=#e07a7a bg=#1f232b}▮{/}{fg=#8aa9c9 bg=#1f232b}◀{/}{bg=#1f232b} {/}{fg=#c8ccd4 bg=#1f232b mod=bold}/tmp/tuxtime-snapshot.txt{/}{fg=#6b7280 bg=#1f232b}  •  0 tas{/}{fg=#6b7280 bg=#1f232b mod=bold} DETAIL{/}{fg=#c8ccd4 bg=#1f232b}                           {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#7fb3a8 bg=#1f232b mod=bold} PROJECTS{/}{fg=#c8ccd4 bg=#1f232b}                 {/}{bg=#1a1d23}                                        {/}{fg=#6b7280 bg=#1f232b} (no task){/}{fg=#c8ccd4 bg=#1f232b}                        {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#6b7280 bg=#1f232b}tag with {/}{fg=#7fb3a8 bg=#1f232b}+project{/}{fg=#c8ccd4 bg=#1f232b}      {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c89a6e bg=#1f232b mod=bold} CONTEXTS{/}{fg=#c8ccd4 bg=#1f232b}                 {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#6b7280 bg=#1f232b}tag with {/}{fg=#c89a6e bg=#1f232b}@context{/}{fg=#c8ccd4 bg=#1f232b}      {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}┌ {/}{fg=#8aa9c9 bg=#1f232b mod=bold}tuxtime{/}{fg=#6b7280 bg=#1f232b} · welcome {/}{fg=#2a2f38 bg=#1f232b}───────────────────────────────────┐{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#8aa9c9 bg=#1f232b}██{/}{fg=#c8ccd4 bg=#1f232b}          {/}{fg=#8aa9c9 bg=#1f232b}██{/}{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#8aa9c9 bg=#1f232b}████{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#e07a7a bg=#1f232b}██{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#8aa9c9 bg=#1f232b}████{/}{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#8aa9c9 bg=#1f232b}██████{/}{fg=#e07a7a bg=#1f232b}██{/}{fg=#8aa9c9 bg=#1f232b}██████{/}{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#8aa9c9 bg=#1f232b}████{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#e07a7a bg=#1f232b}██{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#8aa9c9 bg=#1f232b}████{/}{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#8aa9c9 bg=#1f232b}██{/}{fg=#c8ccd4 bg=#1f232b}          {/}{fg=#8aa9c9 bg=#1f232b}██{/}{fg=#c8ccd4 bg=#1f232b}                    {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}  no todo.txt in this folder yet                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#c89a6e bg=#1f232b mod=bold}c   {/}{fg=#c8ccd4 bg=#1f232b}create ./todo.txt here                         {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#c89a6e bg=#1f232b mod=bold}s   {/}{fg=#c8ccd4 bg=#1f232b}open the sample                                {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#c89a6e bg=#1f232b mod=bold}q   {/}{fg=#c8ccd4 bg=#1f232b}quit                                           {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                                                      {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                      {/}{fg=#2a2f38 bg=#1f232b}└──────────────────────────────────────────────────────┘{/}{fg=#c8ccd4 bg=#1f232b}                      {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#c8ccd4 bg=#1f232b}                          {/}{bg=#1a1d23}                                        {/}{fg=#c8ccd4 bg=#1f232b}                                  {/}
{fg=#1a1d23 bg=#8aa9c9 mod=bold} WELCOME {/}{bg=#252a33}  {/}{fg=#a8b0bc bg=#252a33}c create ./todo.txt · s open sample · q quit{/}{bg=#252a33}      {/}{fg=#6b7280 bg=#252a33}0 open · 2026-05-06 · tuxtime 2026.7.5 {/}
