tests/snapshots/snapshots__welcome_overlay_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tuxtime-snapshot.txt  •  0 tas DETAIL                           
                                                                                                    
 PROJECTS                                                          (no task)                        
   tag with +project                                                                                
                                                                                                    
 CONTEXTS                                                                                           
   tag with @context                                                                                
                                                                                                    
                      ┌ tuxtime · welcome ───────────────────────────────────┐                      
                      │                    ██          ██                    │                      
                      │                    ████  ██  ████                    │                      
                      │                    ██████████████                    │                      
                      │                    ████  ██  ████                    │                      
                      │                    ██          ██                    │                      
                      │                                                      │                      
                      │  no todo.txt in this folder yet                      │                      
                      │                                                      │                      
                      │   c   create ./todo.txt here                         │                      
                      │   s   open the sample                                │                      
                      │   q   quit                                           │                      
                      │                                                      │                      
                      │                                                      │                      
                      │                                                      │                      
                      └──────────────────────────────────────────────────────┘                      
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 WELCOME   c create ./todo.txt · s open sample · q quit      0 open · 2026-05-06 · tuxtime 2026.7.5
